--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Opt out of browser/UI auto-darkening of pages & form controls -->
+    <meta name="color-scheme" content="light">
+
+    <!-- Nice address/status bar color on Android -->
+    <meta name="theme-color" content="#0ea5e9">
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
