--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- Nice address/status bar color on Android -->
     <meta name="theme-color" content="#0ea5e9">
     <meta charset="UTF-8" />
+    <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>nextmake-shot-tracker</title>
